# dashboard

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml  go.sh  index.html
client/assets/: mermaid_config.js
client/src/: data.rs  main.rs  plots.rs  types.rs
client/src/components/: chart_data.rs  line_chart.rs  mod.rs
client/src/pages/: chart.rs  chartistry.rs  data_chartistry.rs  event_stats.rs  mermaid.rs  mod.rs  observable_plot.rs  plotly.rs
server/: Cargo.toml
server/src/: data_server.rs  main.rs  ws_server.rs
shared/: Cargo.toml
shared/src/: types.rs
