[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

[profile.dev]
# Potential to opt-in on higher optimization for our code. This may increase incremental compilation times, but will reduce binaty size.
opt-level = 0
[profile.dev.package."*"]
# High optimization for our dependencies. This should increase performance drastically whithout hitting our incremental compilation times.
# This will lead to obscure error messages from third party libraries. Comment this out when experiencing a tricky bug.
opt-level = 3

[profile.release]
opt-level = "z"
lto = "fat"
debug = 0
strip = true
codegen-units = 1


[dependencies]
shared = { path = "../shared" }
anyhow = "1.0.82"
chrono = "0.4"
console_error_panic_hook = "0.1"
console_log = "1.0"
js-sys = "0.3"
leptos = { version = "0.6.11", features = ["csr", "serde", "nightly"] }
leptos-chartistry = { version = "0.1", git = "https://github.com/feral-dot-io/leptos-chartistry", branch = "master", features = [] }
# leptos-chartistry = "0.1.5"
leptos_meta = { version = "0.6.11", features = ["csr", "nightly"] }
leptos_server_signal = "0.6"
leptos-use = "0.10"
log = "0.4"
plotly = { version = "0.8.4", features = ["plotly_image", "wasm"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4.40"
# web-sys = "0.3"
web-sys = { version = "0.3", features = ["Document", "Element", "Node"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0"
arrow = "51.0.0"
time = "0.3.36"
