[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = {path = "../shared"}
anyhow = "1.0.82"
assert-json-diff = "2.0.2"
axum = { version = "0.7.4" }
chrono = { version = "0.4.37", features = ["serde"] }
clickhouse = "0.11.6"
dotenv = "0.15"
futures = "0.3.30"
leptos_server_signal = { version = "0.6", features = ["ssr", "axum"] }
log = "0.4"
pretty_assertions = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = { version = "0.1.40" }
tracing-subscriber = "0.3.18" 
http = "1"
uuid = { version = "1.8", features = ["v4"] }
url = "2.2.2"

polars = "0.39"
arrow = "51.0.0"
parquet = "51.0.0"
